5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1747_1531.log
== TEST (2019-05-16 11:05:57) 
-- CODE:
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=1
s=1
snl=-1
i=2
from math import*
while t<k:
	s=s+(snl*(x**i)/(factorial(i)))
	t=t+1
	i=i+2
	snl=-1
r=cos(s)
print(round(r,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x= eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:06:30) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=1
s=1
snl=-1
i=2
while t<k:
	s=s+(snl*(x**i)/(factorial(i)))
	t=t+1
	i=i+2
	snl=-1
r=cos(s)
print(round(r,10))
-- OUTPUT:
0.5910346863
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:06:35) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=1
s=1
snl=-1
i=2
while t<k:
	s=s+(snl*(x**i)/(factorial(i)))
	t=t+1
	i=i+2
	snl=-1
r=cos(s)
print(round(r,10))
-- OUTPUT:
0.5910346863
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:07:10) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=2
s=1
snl=-1
i=2
while t<k:
	s=s+(snl*(x**i)/(factorial(i)))
	t=t+1
	i=i+2
	snl=-1
r=cos(s)
print(round(r,10))
-- OUTPUT:
0.5910346863
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:08:31) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=2
s=1
snl=-1
i=2
while t<k:
	s=s+(snl*(x**i)/(factorial(i)))
	t=t+1
	i=i+2
	snl=-1
print(round(s,10))
-- OUTPUT:
0.9384553862
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:08:41) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=2
s=1
snl=-1
i=2
while t<k:
	s=s+(snl*(x**i)/(factorial(i)))
	t=t+1
	i=i+2
	snl=-1
print(round(s,10))
-- OUTPUT:
0.9384553862
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:09:33) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=2
s=1
snl=-1
i=2
while t<k:
	s=s+snl*((x**i)/(factorial(i)))
	t=t+1
	i=i+2
	snl=-1
print(round(s,10))
-- OUTPUT:
0.9384553862
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:09:41) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=2
s=1
snl=-1
i=2
while t<k:
	s=s+snl*((x**i)/(factorial(i)))
	t=t+1
	i=i+2
	snl=-1
print(round(s,10))
-- OUTPUT:
0.9384553862
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:10:08) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=1
s=1
snl=-1
i=2
while t<k:
	s=s+snl*((x**i)/(factorial(i)))
	t=t+1
	i=i+2
	snl=-1
print(round(s,10))
-- OUTPUT:
0.9384553862
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:10:17) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=1
s=1
snl=-1
i=2
while t<k:
	s=s+snl*((x**i)/(factorial(i)))
	t=t+1
	i=i+2
	snl=-1
print(round(s,10))
-- OUTPUT:
0.9384553862
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:10:28) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=1
s=1
snl=-1
i=2
while t<k:
	s=s+snl*((x**i)/(factorial(i)))
	t=t+1
	i=i+2
	snl=-1
print(round(s,10))
-- OUTPUT:
0.9384553862
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:10:35) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=1
s=1
snl=-1
i=2
while t<k:
	s=s+snl*((x**i)/(factorial(i)))
	t=t+1
	i=i+2
	snl=-1
print(round(s,10))
-- EXECUTION TIME:
0.13518
-- TEST CASE 1:
---- input:
pi/9
6
---- correct output:
0.9396926208
---- user output:
0.9384553862
-- TEST CASE 2:
---- input:
pi/10
20
---- correct output:
0.9510565163
---- user output:
0.9502447692
-- TEST CASE 3:
---- input:
pi
9
---- correct output:
-0.9999998647
---- user output:
-9.591953133
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:10:40) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=1
s=1
snl=-1
i=2
while t<k:
	s=s+snl*((x**i)/(factorial(i)))
	t=t+1
	i=i+2
	snl=-1
print(round(s,10))
-- OUTPUT:
0.9384553862
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:13:03) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=1
s=0
snl=-1
i=2
while t<k:
	s=s+snl*((x**i)/(factorial(i)))
	i=i+2
	snl=-1
	t=t+1
r=1-s
print(round(r,10))
-- OUTPUT:
1.0615446138
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:13:45) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=1
s=0
snl=-1
i=2
while t<k:
	s=s+snl*((x**i)/(factorial(i)))
	i=i+2
	snl=snl*-1
	t=t+1
r=1-s
print(round(r,10))
-- OUTPUT:
1.0603073792
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:13:52) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=1
s=0
snl=-1
i=2
while t<k:
	s=s+snl*((x**i)/(factorial(i)))
	i=i+2
	snl=snl*-1
	t=t+1
r=1-s
print(round(r,10))
-- OUTPUT:
1.0603073792
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:14:05) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=2
s=0
snl=-1
i=2
while t<k:
	s=s+snl*((x**i)/(factorial(i)))
	i=i+2
	snl=snl*-1
	t=t+1
r=1-s
print(round(r,10))
-- OUTPUT:
1.0603073792
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:14:13) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=2
s=0
snl=-1
i=2
while t<k:
	s=s+snl*((x**i)/(factorial(i)))
	i=i+2
	snl=snl*-1
	t=t+1
r=1-s
print(round(r,10))
-- OUTPUT:
1.0603073792
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:15:01) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=1
s=1
snl=-1
i=2
while t<k:
	s=s+snl*((x**i)/(factorial(i)))
	i=i+2
	snl=snl*-1
	t=t+1
r=s
print(round(r,10))
-- OUTPUT:
0.9396926208
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:15:11) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=1
s=1
snl=-1
i=2
while t<k:
	s=s+snl*((x**i)/(factorial(i)))
	i=i+2
	snl=snl*-1
	t=t+1
r=s
print(round(r,10))
-- OUTPUT:
0.9396926208
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:15:18) 
-- CODE:
from math import*
x= eval(input("insira um angulo: "))
k= int(input("insira a quantidade de termos: "))
t=1
s=1
snl=-1
i=2
while t<k:
	s=s+snl*((x**i)/(factorial(i)))
	i=i+2
	snl=snl*-1
	t=t+1
r=s
print(round(r,10))
-- EXECUTION TIME:
0.143959
-- TEST CASE 1:
---- input:
pi/9
6
---- correct output:
0.9396926208
---- user output:
0.9396926208
-- TEST CASE 2:
---- input:
pi/10
20
---- correct output:
0.9510565163
---- user output:
0.9510565163
-- TEST CASE 3:
---- input:
pi
9
---- correct output:
-0.9999998647
---- user output:
-0.9999998647
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
